<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/lightBlue"
    android:padding="5dp">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_welcome_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp">

    </ImageView>

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/icon"
        android:layout_marginStart="36dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="@color/white"
        android:hint="@string/username"
        android:textColorHint="@color/white">

    </EditText>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:layout_below="@+id/editTextUsername"
        android:layout_marginTop="15dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white">

    </EditText>


    <TextView
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/button_login_custom"
        android:text="LOGIN"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/white">

    </TextView>

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="24dp"
        android:textColor="@color/white">

    </TextView>

    <TextView
        android:id="@+id/connectFBButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/or"
        android:layout_centerInParent="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/button_login_custom"
        android:text="CONNECT WITH FACEBOOK"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center">

    </TextView>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/connectFBButton"
        android:text="@string/register"
        android:textSize="18dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_marginTop="15dp">

    </TextView>


</RelativeLayout>